--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,11 +1,73 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <div class="ui text container">
-      <h1>Hello {% if not (current_user.is_authenticated) %} stranger {% else %} {{ current_user.full_name() }} {% endif %},</h1>
+<div class="ui stackable grid container" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+        <div class="sixteen wide tablet twelve wide computer centered column">
+            <h2 class="ui header">
+                Welcome to Algotrader Server
+                <div class="sub header" style="margin-top: 10px;">
+                    Last clients connections:
+                </div>
+            </h2>
 
-        <p>Here the list of last connections will be presented</p>
+            <div class="ui menu">
+                <div class="ui left search item">
+                    <div class="ui transparent icon input">
+                        <input id="search-users" type="text" placeholder="Search users…">
+                        <i class="search icon"></i>
+                    </div>
+                </div>
+            </div>
 
+            {# Use overflow-x: scroll so that mobile views don't freak out
+             # when the table is too wide #}
+            <div style="overflow-x: scroll;">
+                <table class="ui searchable sortable unstackable selectable celled table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Email address</th>
+                            <th class="sorted descending">Connection time</th>
 
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for u in connections | sort(reverse=true,attribute='reported_connection') %}
+                        <tr >
+
+                            <td>{{ u.id }}</td>
+                            <td>{{ u.email }}</td>
+                            <td>{{ u.reported_connection.replace(microsecond=0) }}</td>
+
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#search-users').keyup(function () {
+                var searchText = $(this).val();
+                if (searchText.length > 0) {
+                    $('tbody td:icontains(' + searchText + ')').addClass('positive');
+                    $('td.positive').not(':icontains(' + searchText + ')').removeClass('positive');
+                    $('tbody td').not(':icontains(' + searchText + ')').closest('tr').addClass('hidden').hide();
+                    $('tr.hidden:icontains(' + searchText + ')').removeClass('hidden').show();
+                } else {
+                    $('td.positive').removeClass('positive');
+                    $('tr.hidden').removeClass('hidden').show();
+                }
+            });
+
+            $('#select-role').dropdown({
+                onChange: function (value, text, $selectedItem) {
+                    $('td.user.role:contains(' + value + ')').closest('tr').removeClass('hidden').show();
+                    $('td.user.role').not(':contains(' + value + ')').closest('tr').addClass('hidden').hide();
+                }
+            });
+        });
+    </script>
 {% endblock %}
