--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -33,6 +33,9 @@
                                     description='Create a new user account', icon='add user icon') }}
                 {{ dashboard_option('Invite New User', 'admin.invite_user',
                                     description='Invites a new user to create their own account', icon='add user icon') }}
+                {{ dashboard_option('Market Data', 'admin.market_data',
+                                    description='Stored Market data') }}
+
             </div>
         </div>
     </div>
