--- a/app/templates/userview/portfoliostatistics.html
+++ b/app/templates/userview/portfoliostatistics.html
@@ -33,7 +33,7 @@
         <div class="twelve wide column">
             <h2 class="ui header">
                 Portfolio statistics
-                <div class="sub header">Manage your account settings and change your login information.</div>
+                <div class="sub header">General portfolio performance. Coming soon...</div>
             </h2>
         </div>
         <div class="stretched divided very relaxed row">
