--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -32,7 +32,7 @@
         <div class="twelve wide column">
             <h2 class="ui header">
                 Algotrader Workstation
-                <div class="sub header">Manage your account settings and change your login information.</div>
+                <div class="sub header">Trading station state. Coming soon...</div>
             </h2>
         </div>
         <div class="stretched divided very relaxed row">
