new template completely dressed up

--- a/app/templates/userview/usercandidates.html
+++ b/app/templates/userview/usercandidates.html
@@ -9,8 +9,8 @@
                     <i class="pe-7s-albums icon-gradient bg-mean-fruit">
                     </i>
                 </div>
-                <div>Portfolio performance
-                    <div class="page-title-subheading">General portfolio performance for user.
+                <div>User candidates
+                    <div class="page-title-subheading">Candidates added by user.
                     </div>
                 </div>
             </div>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="row">
-        Coming soon
+        Coming soon.
     </div>
 </div>
 {% endblock %}
