--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -1,78 +1,24 @@
 {% extends 'layouts/base.html' %}
-{% import 'macros/form_macros.html' as f %}
-{% import 'macros/check_password.html' as check %}
-
-{% set endpoints = [
-    ('userview.traderstationstate', 'Algotrader'),
-    ('userview.closedpositions', 'Closed positions'),
-    ('userview.portfoliostatistics', 'Portfolio statistics'),
-    ('account.logout', 'Log out')
-] %}
-
-{% macro navigation(items) %}
-    <div class="ui vertical fluid secondary menu">
-        {% for route, name in items %}
-            {% set href = url_for(route) %}
-            <a class="item {% if request.endpoint == route %}active{% endif %}" href="{{ href }}">
-                {{ name }}
-            </a>
-        {% endfor %}
-    </div>
-{% endmacro %}
-
 
 {% block content %}
-    <div class="ui stackable centered grid container">
-        <div class="sixteen wide tablet twelve wide computer centered column">
-
-            <h2 class="ui header">
-                Closed Positions
-                <div class="sub header">
-                    All the positions reported to server.
+<div class="app-main__inner">
+    <div class="app-page-title">
+        <div class="page-title-wrapper">
+            <div class="page-title-heading">
+                <div class="page-title-icon">
+                    <i class="pe-7s-albums icon-gradient bg-mean-fruit">
+                    </i>
                 </div>
-            </h2>
-
-            <div class="ui menu">
-                <div class="ui left search item">
-                    <div class="ui transparent icon input">
-                        <input id="search-users" type="text" placeholder="Search users…">
-                        <i class="search icon"></i>
+                <div>Closed positions
+                    <div class="page-title-subheading">Deals executed by Algotrader.
                     </div>
                 </div>
             </div>
 
-            {# Use overflow-x: scroll so that mobile views don't freak out
-             # when the table is too wide #}
-            <div style="overflow-x: scroll;">
-                <table class="ui searchable sortable unstackable selectable celled table">
-                    <thead>
-                        <tr>
-                            <th>Ticker</th>
-                            <th>Time opened</th>
-                            <th>Price opened</th>
-                            <th>Price closed</th>
-                            <th class="sorted descending">Time closed</th>
-                            <th>Amount</th>
-                            <th>Profit</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for p in positions | sort(attribute='closed') %}
-                        <tr onclick="alert('implement going to candidate')">
-                            <td>{{ p.ticker }}</td>
-                            <td>{{ p.opened }}</td>
-                            <td>{{ p.open_price }}</td>
-                            <td>{{ p.closed }}</td>
-                            <td>{{ p.close_price }}</td>
-                            <td>{{ p.stocks }}</td>
-                            <td>{{ p.profit }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
         </div>
-
     </div>
-    {{ check.password_check('new_password', 0) }}
+    <div class="row">
+        Coming soon.
+    </div>
+</div>
 {% endblock %}
