--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -49,14 +49,14 @@
             </div>
         </div>
         <div class="col-md-6 col-xl-4">
-            <div class="card mb-3 widget-content bg-grow-early">
+            <div class="card mb-3 widget-content bg-grow-early box_pnl">
                 <div class="widget-content-wrapper text-white">
                     <div class="widget-content-left">
                         <div class="widget-heading">PNL</div>
                         <div class="widget-subheading">Daily PnL for all positions</div>
                     </div>
                     <div class="widget-content-right">
-                        <div class="widget-numbers text-white"><span>$ {{ report.dailyPnl }}</span></div>
+                        <div class="widget-numbers text-white "><span class="val_pnl">$ {{ report.dailyPnl }}</span></div>
                     </div>
                 </div>
             </div>
@@ -77,181 +77,33 @@
     </div>
     <div class="divider mt-0" style="margin-bottom: 30px;"></div>
     <div class="row">
+        {% for key, value in open_positions.items()  %}
         <div class="col-lg-6 col-xl-4">
             <div class="card mb-3 widget-content">
                 <div class="widget-content-outer">
                     <div class="widget-content-wrapper">
                         <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
+                            <div class="widget-heading">  {{key}}</div>
+                            <div class="widget-subheading">Today change: ${{value['DailyPnL']|round(1) }}</div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
+                            <div class="widget-numbers {{value['profit_class']}}">{{value['profit_in_percents']|round(1) }}%</div>
                         </div>
                     </div>
                     <div class="widget-progress-wrapper">
                         <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
+                            <div class="progress-bar {{value['profit_progress_colour']}}" role="progressbar" aria-valuenow="20" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: {{value['profit_progress_percent']}}%;"></div>
                         </div>
                         <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
+                            <div class="sub-label-left"> {{value['stocks']}} x {{value['cost']|round(1)}}</div>
+                            <div class="sub-label-right">{{(value['stocks']*value['cost'])|round(1)}}</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-lg-6 col-xl-4">
-            <div class="card mb-3 widget-content">
-                <div class="widget-content-outer">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
-                        </div>
-                    </div>
-                    <div class="widget-progress-wrapper">
-                        <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
-                        </div>
-                        <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xl-4">
-            <div class="card mb-3 widget-content">
-                <div class="widget-content-outer">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
-                        </div>
-                    </div>
-                    <div class="widget-progress-wrapper">
-                        <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
-                        </div>
-                        <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xl-4">
-            <div class="card mb-3 widget-content">
-                <div class="widget-content-outer">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
-                        </div>
-                    </div>
-                    <div class="widget-progress-wrapper">
-                        <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
-                        </div>
-                        <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xl-4">
-            <div class="card mb-3 widget-content">
-                <div class="widget-content-outer">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
-                        </div>
-                    </div>
-                    <div class="widget-progress-wrapper">
-                        <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
-                        </div>
-                        <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xl-4">
-            <div class="card mb-3 widget-content">
-                <div class="widget-content-outer">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
-                        </div>
-                    </div>
-                    <div class="widget-progress-wrapper">
-                        <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
-                        </div>
-                        <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xl-4">
-            <div class="card mb-3 widget-content">
-                <div class="widget-content-outer">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">TCKR</div>
-                            <div class="widget-subheading">Company</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-success">3%</div>
-                        </div>
-                    </div>
-                    <div class="widget-progress-wrapper">
-                        <div class="progress-bar-xs progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 65%;"></div>
-                        </div>
-                        <div class="progress-sub-label">
-                            <div class="sub-label-left">12x78.34</div>
-                            <div class="sub-label-right">986</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
 
     </div>
     <div class="divider mt-0" style="margin-bottom: 30px;"></div>
@@ -382,4 +234,5 @@
                             </div>
     </div>
 </div>
+<script type="text/javascript" src="{{ url_for('static', filename='assets/scripts/traderstation.js') }}"></script>
 {% endblock %}
