--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -78,7 +78,7 @@
     <div class="divider mt-0" style="margin-bottom: 30px;"></div>
     <div class="row">
         {% for key, value in open_positions.items()  %}
-
+        {% if value['Value']!=0 %}
         <div class="col-lg-6 col-xl-4">
             <div class="card mb-3 widget-content">
                 <div class="widget-content-outer">
@@ -104,6 +104,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
         {% endfor %}
 
     </div>
