modal window added

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -579,7 +579,36 @@
 </div>
 {% endif %}
 <script type="text/javascript" src="{{ url_for('static', filename='assets/scripts/main.js') }}"></script>
-
+<!-- Modal -->
+<div class="modal fade" id="add_candidate_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+               <div >
+                                                <div class="form-group">
+                                                    <label class="form-label" for="title">Ticker</label>
+                                                    <input id="ticker" type="text" class="form-control" placeholder="Enter a ticker ...">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="form-label" for="message">Description</label>
+                                                    <textarea class="form-control" id="description" rows="3" placeholder="Enter a description ..."></textarea>
+                                                </div>
+                                            </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
 
