--- a/app/templates/userview/usercandidates.html
+++ b/app/templates/userview/usercandidates.html
@@ -17,8 +17,71 @@
 
         </div>
     </div>
-    <div class="row">
-        Coming soon.
+    <div class="column">
+        <button type="button" class="btn mr-2 mb-2 btn-primary" data-toggle="modal" data-target="#add_candidate_modal">Add
+            Candidate
+        </button>
+
+        <div class="ui menu">
+            <div class="ui left search item">
+                <div class="ui transparent icon input">
+                    <input id="search-users" type="text" placeholder="Search users…">
+                    <i class="search icon"></i>
+                </div>
+            </div>
+        </div>
+
+        {# Use overflow-x: scroll so that mobile views don't freak out
+        # when the table is too wide #}
+        <div style="overflow-x: scroll;">
+            <table class="ui searchable sortable unstackable selectable celled table">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>User</th>
+                    <th class="sorted descending">Ticker</th>
+                    <th>Description</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for m in candidates | sort(attribute='ticker') %}
+                <tr onclick="alert('implement going to candidate')">
+                    <td>{{ m.id }}</td>
+                    <td>{{ m.email }}</td>
+                    <td>{{ m.ticker }}</td>
+                    <td>{{ m.description }}</td>
+
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
     </div>
 </div>
+<script type="text/javascript">
+        $(document).ready(function () {
+            $('#search-users').keyup(function () {
+                var searchText = $(this).val();
+                if (searchText.length > 0) {
+                    $('tbody td:icontains(' + searchText + ')').addClass('positive');
+                    $('td.positive').not(':icontains(' + searchText + ')').removeClass('positive');
+                    $('tbody td').not(':icontains(' + searchText + ')').closest('tr').addClass('hidden').hide();
+                    $('tr.hidden:icontains(' + searchText + ')').removeClass('hidden').show();
+                } else {
+                    $('td.positive').removeClass('positive');
+                    $('tr.hidden').removeClass('hidden').show();
+                }
+            });
+
+            $('#select-role').dropdown({
+                onChange: function (value, text, $selectedItem) {
+                    $('td.user.role:contains(' + value + ')').closest('tr').removeClass('hidden').show();
+                    $('td.user.role').not(':contains(' + value + ')').closest('tr').addClass('hidden').hide();
+                }
+            });
+        });
+
+</script>
+
 {% endblock %}
