--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -594,17 +594,17 @@
                <div >
                                                 <div class="form-group">
                                                     <label class="form-label" for="title">Ticker</label>
-                                                    <input id="ticker" type="text" class="form-control" placeholder="Enter a ticker ...">
+                                                    <input id="txt_ticker" type="text" class="form-control" placeholder="Enter a ticker ...">
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="form-label" for="message">Description</label>
-                                                    <textarea class="form-control" id="description" rows="3" placeholder="Enter a description ..."></textarea>
+                                                    <textarea class="form-control" id="txt_description" rows="3" placeholder="Enter a description ..."></textarea>
                                                 </div>
                                             </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" id="btn_add_candidate" class="btn btn-primary">Add Candidate</button>
             </div>
         </div>
     </div>
