--- a/app/templates/userview/usercandidates.html
+++ b/app/templates/userview/usercandidates.html
@@ -60,8 +60,9 @@
 
     </div>
 </div>
-<script type="text/javascript">
-        $(document).ready(function () {
+
+<script type="text/javascript" >
+     $(document).ready(function () {
             $('#search-users').keyup(function () {
                 var searchText = $(this).val();
                 if (searchText.length > 0) {
@@ -81,19 +82,20 @@
                     $('td.user.role').not(':contains(' + value + ')').closest('tr').addClass('hidden').hide();
                 }
             });
-            $( "#btn_add_candidate" ).click(function() {
-            $.ajax({
-                      type : 'POST',
-                      url : "{{url_for('userview.addcandidate')}}",
-                      contentType: "application/json; charset=utf-8",
-                      dataType:'json',
-                      data : JSON.stringify({"ticker":$('#txt_ticker').val(),"description":$('#txt_description').val()})
-                    });
-                 });
-        });
 
+<!--            $( "#btn_add_candidate" ).click(function()-->
+<!--            {-->
+<!--                $.ajax({-->
+<!--                      type : 'POST',-->
+<!--                      url : "{{url_for('userview.addcandidate')}}",-->
+<!--                      contentType: "application/json; charset=utf-8",-->
+<!--                      dataType:'json',-->
+<!--                      data : JSON.stringify({"ticker":$('#txt_ticker').val(),"description":$('#txt_description').val()-->
+<!--                      })-->
 
+<!--               });-->
+<!--               window.location.href = "{{url_for('userview.usercandidates')}}";-->
+<!--            });-->
+ })
 </script>
-
-
 {% endblock %}
