--- a/app/templates/userview/usercandidates.html
+++ b/app/templates/userview/usercandidates.html
@@ -38,8 +38,6 @@
             <table class="ui searchable sortable unstackable selectable celled table">
                 <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>User</th>
                     <th class="sorted descending">Ticker</th>
                     <th></th>
                     <th>Description</th>
@@ -48,13 +46,11 @@
                 <tbody>
                 {% for m in candidates | sort(attribute='ticker') %}
                 <tr >
-                    <td>{{ m.id }}</td>
-                    <td>{{ m.email }}</td>
                     <td >{{ m.ticker }}</td>
                     <td>
                         <form action="{{url_for('userview.removecandidate')}}" method="post">
                             <input type="hidden" name="ticker_to_remove" value="{{ m.ticker }}">
-                            <button type="submit" ><i class="metismenu-icon pe-7s-trash"></i></button>
+                            <button type="submit" ><i class="fa fa-trash"></i></button>
                         </form>
 
                     </td>
