--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -544,6 +544,12 @@
                                 Candidates
                             </a>
                         </li>
+                                                <li>
+                            <a href="/algotradersettings/usersettings" >
+                                <i class="metismenu-icon pe-7s-tools"></i>
+                                Algotrader Settings
+                            </a>
+                        </li>
                         <li class="app-sidebar__heading">Analytics</li>
                         <li>
                             <a href="/userview/closedpositions" >
