market data reported as list

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -558,7 +558,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/userview/portfoliostatistics" >
+<!--                            <a href="/userview/portfoliostatistics" >-->
+                            <a href="https://www.interactivebrokers.co.uk/portal/?action=ACCT_MGMT_MAIN&loginType=1&clt=0&RL=1#/portfolio/performance" >
+
                                 <i class="metismenu-icon pe-7s-graph2"></i>
                                 Portfolio performance
                             </a>
@@ -600,11 +602,11 @@
             <div class="modal-body">
                <div >
                                                 <div class="form-group">
-                                                    <label class="form-label" for="title">Ticker</label>
+                                                    <label class="form-label" for="txt_ticker">Ticker</label>
                                                     <input required id="txt_ticker" name="txt_ticker" type="text" class="form-control" placeholder="Enter a ticker ...">
                                                 </div>
                                                 <div class="form-group">
-                                                    <label class="form-label" for="message">Description</label>
+                                                    <label class="form-label" for="txt_description">Description</label>
                                                     <textarea required class="form-control" name="txt_description" id="txt_description" rows="3" placeholder="Enter a description ..."></textarea>
                                                 </div>
                                             </div>
